Fix getUserMedia so that failure is reported for invalid audio sources. This changes getUserMedia to wait for initialization of local audio sources before issuing the completion callback (either success or failure). Previously, if an error occurs between attempting to start a local audio source and the render side OnStreamCreated callback, getUserMedia would report successful completion with an audio track but no audio would actually be delivered for that track.

BUG=679210
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2623443002
Cr-Commit-Position: refs/heads/master@{#442323}

Former-commit-id: 81cb66acf3f8099e416c7fc5ecbcaabf6d5c3c04